# Eulerian-Motion-Magnification

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Eulerian_MotionMag.cpp  LICENSE  README.md  Readme.txt
include/: EulerianMotionMag.h  Timer.h  eulerian_motion_mag.h  timer.h
src/: EulerianMotionMag.cpp  eulerian_motion_mag.cpp  main.cpp
test/: test_baby.param
